--- a/src/css/images/App.css
+++ b/src/css/images/App.css
@@ -16,7 +16,7 @@
   justify-content: space-around;
 }
 
-.user{
+.bold{
   display: block;
   margin-left: 8px;
   font-weight: 600;
@@ -26,4 +26,9 @@
 .created-at{
   margin-left: 8px;
   font-size: 10pt;
+}
+
+.n-card-img{
+  width: 100%;
+  height: 100%;
 }
